fix: fixing bugs